<resources>
    <string name="app_name">Поступай в МЭИ правильно</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="default_notification_channel_id">default</string>
    <string name="testingGroupName">Testing group</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="get_token">Get token</string>
    <string name="filename">FILENAME</string>
    <string name="logo">LOGO</string>
    <string name="loading">Загрузка&#8230;</string>
    <string name="passRecovery">Забыли пароль?</string>
    <string name="login_btn">Войти</string>
    <string name="login_hint">Логин</string>
    <string name="passwordHint">Пароль</string>
    <string name="gotoRegPage">Нет аккаунта? Зарегистрироваться</string>
    <string name="last_name">Фамилия</string>
    <string name="first_name">Имя</string>
    <string name="middle_name">Отчество</string>
    <string name="birth_date_hint">Выберите дату рождения.</string>
    <string name="answer_str">Ваш ответ</string>
    <string name="reg_btn_text">Зарегистрироваться</string>
    <string name="gotoLoginPage">Уже есть аккаунт?</string>
    <string name="choose_secret_question">Выберите контрольный вопрос:</string>
    <string name="chooseYourOwnQuestion">Или введите свой:</string>
    <string name="registrationPage">Регистрация</string>
    <string name="app_icon">Icon</string>
    <string name="menu">Меню</string>
    <string name="main_page">Главная страница</string>
    <string name="exit">Выход</string>
    <string name="email">e-mail</string>
    <string name="nav_queue">Постановка в очередь</string>
    <string name="nav_main">Главная</string>
    <string name="nav_docs">Подача документов</string>
    <string name="open_new_tab">Открыть в новой вкладке</string>
    <string name="news">Новости</string>
    <string name="error_news">К сожалению новости не доступны в данный момент.</string>
    <string name="goto_room_text">В аудиторию Б-300 приглашаются</string>
    <string name="queue_reserved_info">Абитуриенты, зарезервировавшие место в очереди, обслуживаются в приоритетном порядке в зарезервированном интервале времени. Гарантируется начало работы с абитуриентом в пределах выбранного интервала времени. Абитуриент должен прибыть в НИУ «МЭИ» и зарегистрироваться не позднее, чем за 15 минут до начала выбранного интервала времени. В случае опоздания (не более чем на 30 минут от начала периода резервирования), время гарантированного начала работы с абитуриентом сдвигается на 30 минут вперед. При опоздании более чем на 30 минут зарезервированное место в очереди аннулируется.</string>
    <string name="user_info">Вы успешно зарегистрированы!\nПожалуйста, запомните Ваши данные для входа в свой аккаунт:\nЛогин - <b>%s</b>\nПароль - <b>%s</b>;</string>
    <string name="docsEditMsg">Подача документов в мобильном приложении временно недоступна. Чтобы заполнить документы на сайте нажмите конпку \"Перейти на сайт\".</string>
    <string name="openWebBtn">Перейти на сайт</string>
    <string name="debugLogin">PetrovAR1996</string>
    <string name="debugPass">2YAjer.B</string>
    <string name="button_navQueue">Занять место в очереди</string>
    <string-array name="passRestoreQuestions">
        <item>Девичья фамилия Вашей матери?</item>
        <item>Кличка Вашего первого питомца?</item>
        <item>Номер школы, которую Вы закончили?</item>
        <item>Имя лучшего друга детства?</item>
        <item>Куда Вы впервые полетели на самолете?</item>
    </string-array>
    <string name="siteCommonPubKey">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAz6xirYMIGw9obXGuN5TomjPwiCfQKUsdOgktygiiwwCGx5FqMxPf32VFWMEAiTWTKCnSxlS45+3mugXnkcyz6ltKslf16ON1LEERV0HQWq+WzFm1KN/QabG1Slj0JqTYVptnuwsMSl0cYrXQY/OuwbmE+5cR3p7LjwelKyzLnl9u7O/DjE1R3RsCqbZtmYlSWDBBYFUm1B+aBWwUnBid4poyQo3kqMV7TWzgpi+8vZPvVK8OAPHqdg2Ub/XDxi434Mmr+AmEbsy1GvQONg/iW1sq0Q4s++sLv4qThaS5zqk0mU3KDWyVvgvqWhguvjNM2g+kIwQ8f1IHSL03X3HUtQIDAQAB</string>
</resources>
