<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single"
        android:id="@+id/mainMenuGroup">
        <item
            android:id="@+id/nav_main"
            android:title="@string/nav_main" />
        <item
            android:id="@+id/nav_queue"
            android:title="@string/nav_queue" />
        <item
            android:id="@+id/nav_docs"
            android:title="@string/nav_docs"/>
        <item
            android:id="@+id/nav_news"
            android:title="@string/news"/>
        <item
            android:id="@+id/nav_exit"
            android:title="@string/exit" />
    </group>

</menu>
